k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-dashboard
  labels:
    app: mqtt-dashboard
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: mqtt-dashboard
